tests/error/name_conflict.gw
// [contains] conflicts with previously defined value
class C { int test; }
class D extends C { function int test() {} }
